--- a/new.css
+++ b/new.css
@@ -1,1 +1,15 @@
+body {
+  background-color: white;
+  color: black;
+  font-size: 15px;
+  font-family: Arial, helvetica,sans-serif;  
+}
 
+.exp-header {
+  text-align: center;
+  text-transform: uppercase;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  background-color: Maroon;
+  font-size: 24px;
+}
