--- a/new.css
+++ b/new.css
@@ -1,8 +1,8 @@
 body {
   background-color: white;
   color: black;
-  font-size: 15px;
   font-family: Arial, helvetica,sans-serif;  
+  margin: 15% 25%;
 }
 
 .exp-header {
