--- a/new.css
+++ b/new.css
@@ -10,6 +10,6 @@ body {
   text-transform: uppercase;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
-  background-color: Maroon;
+  background-color: white;
   font-size: 24px;
 }
