--- a/new.css
+++ b/new.css
@@ -4,7 +4,15 @@ body {
   font-family: Arial, helvetica,sans-serif;  
   margin: 10% 20%;
 }
-
+h1{
+  font-size: 24px; 
+}
+h2{
+  font-size: 12px;
+}
+h3{
+  font-size: 12px;  
+}
 .exp-header {
   text-align: center;
   text-transform: uppercase;
