--- a/new.css
+++ b/new.css
@@ -5,6 +5,13 @@ body {
   font-family: Arial, helvetica,sans-serif;  
   margin: 10% 20%;
 }
+.image img
+{
+ width: 200px;
+  height: 200px;
+  margin-right: 100px;
+}
+  
 h1{
   font-size: 25px; 
 }
